--- a/docs/PS3/BCAS20202.md
+++ b/docs/PS3/BCAS20202.md
@@ -5,7 +5,7 @@
 ### 1. ICO
 ### 2. Save 1 Play Time 0:00
 
-Target File: `BCES01097_ICO/MASTER.BIN`
+Target File: `BCES01097_ICO\MASTER.BIN`
 
 ```
 20000008 00000000
@@ -13,7 +13,7 @@ Target File: `BCES01097_ICO/MASTER.BIN`
 
 ### 3. Save 2 Play Time 0:00
 
-Target File: `BCES01097_ICO/MASTER.BIN`
+Target File: `BCES01097_ICO\MASTER.BIN`
 
 ```
 2000001C 00000000
@@ -21,7 +21,7 @@ Target File: `BCES01097_ICO/MASTER.BIN`
 
 ### 4. Save 3 Play Time 0:00
 
-Target File: `BCES01097_ICO/MASTER.BIN`
+Target File: `BCES01097_ICO\MASTER.BIN`
 
 ```
 20000030 00000000
@@ -29,7 +29,7 @@ Target File: `BCES01097_ICO/MASTER.BIN`
 
 ### 5. Save 4 Play Time 0:00
 
-Target File: `BCES01097_ICO/MASTER.BIN`
+Target File: `BCES01097_ICO\MASTER.BIN`
 
 ```
 20000044 00000000
@@ -37,7 +37,7 @@ Target File: `BCES01097_ICO/MASTER.BIN`
 
 ### 6. Save 5 Play Time 0:00
 
-Target File: `BCES01097_ICO/MASTER.BIN`
+Target File: `BCES01097_ICO\MASTER.BIN`
 
 ```
 20000058 00000000
@@ -47,7 +47,7 @@ Target File: `BCES01097_ICO/MASTER.BIN`
 ### 8. Shadow of the Colossus\Health Modifier (Choose one)
 ### 9. Ultra Long Health(900)
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 20000090 44610000
@@ -55,7 +55,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 
 ### 10. Easy trophy for Max health by eating one fruit
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 20000090 440E0000
@@ -64,7 +64,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 ### 11. Shadow of the Colossus\Others
 ### 12. Max Grip(900)
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 20000094 44610000
@@ -72,7 +72,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 
 ### 13. Time Attack Mode Unlocked + Game Completion 1
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 00003C3C 00000001
@@ -81,7 +81,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 ### 14. Shadow of the Colossus\Difficulty Modifier (Choose one)
 ### 15. Difficulty: Normal
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 00003C44 00000000
@@ -89,7 +89,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 
 ### 16. Difficulty: Hard
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 00003C44 00000001
@@ -98,7 +98,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 ### 17. Shadow of the Colossus\Horse Modifier (Choose one)
 ### 18. Normal Black Horse
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 00003C23 00000000
@@ -106,7 +106,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 
 ### 19. White Horse
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 00003C23 00000001
@@ -114,7 +114,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 
 ### 20. Brown Horse
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 00003C23 00000002
@@ -122,7 +122,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 
 ### 21. Ico Horse
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 00003C23 00000004
@@ -131,7 +131,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 ### 22. Shadow of the Colossus\Untested Codes
 ### 23. All Items Equipped
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 00003C22 000000CC
@@ -140,7 +140,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 
 ### 24. All Time Trial Records 1 sec
 
-Target File: `BCAS20202_SOTC/GAME.00*`
+Target File: `BCAS20202_SOTC\GAME.00*`
 
 ```
 42003C50 3F800000
@@ -150,7 +150,7 @@ Target File: `BCAS20202_SOTC/GAME.00*`
 ### 25.  Update ICO Checksum (Required)
 ### 26. Update Checksum for MASTER.BIN (Required)
 
-Target File: `BCAS20202_ICO/MASTER.BIN`
+Target File: `BCAS20202_ICO\MASTER.BIN`
 
 ```
 set [csum]:0
@@ -162,7 +162,7 @@ write next (0):[csum]
 
 ### 27. Update Checksum for GAME.000 (Required)
 
-Target File: `BCAS20202_ICO/GAME.000`
+Target File: `BCAS20202_ICO\GAME.000`
 
 ```
 set [csum]:0
@@ -174,7 +174,7 @@ write next (0):[csum]
 
 ### 28. Update Checksum for GAME.001 (Required)
 
-Target File: `BCAS20202_ICO/GAME.001`
+Target File: `BCAS20202_ICO\GAME.001`
 
 ```
 set [csum]:0
@@ -186,7 +186,7 @@ write next (0):[csum]
 
 ### 29. Update Checksum for GAME.002 (Required)
 
-Target File: `BCAS20202_ICO/GAME.002`
+Target File: `BCAS20202_ICO\GAME.002`
 
 ```
 set [csum]:0
@@ -198,7 +198,7 @@ write next (0):[csum]
 
 ### 30. Update Checksum for GAME.004 (Required)
 
-Target File: `BCAS20202_ICO/GAME.003`
+Target File: `BCAS20202_ICO\GAME.003`
 
 ```
 set [csum]:0
@@ -210,7 +210,7 @@ write next (0):[csum]
 
 ### 31. Update Checksum for GAME.004 (Required)
 
-Target File: `BCAS20202_ICO/GAME.004`
+Target File: `BCAS20202_ICO\GAME.004`
 
 ```
 set [csum]:0
@@ -222,7 +222,7 @@ write next (0):[csum]
 
 ### 32. Update Checksum for GAME.005 (Required)
 
-Target File: `BCAS20202_ICO/GAME.005`
+Target File: `BCAS20202_ICO\GAME.005`
 
 ```
 set [csum]:0
@@ -234,7 +234,7 @@ write next (0):[csum]
 
 ### 33. Update Checksum for GAME.006 (Required)
 
-Target File: `BCAS20202_ICO/GAME.006`
+Target File: `BCAS20202_ICO\GAME.006`
 
 ```
 set [csum]:0
@@ -246,7 +246,7 @@ write next (0):[csum]
 
 ### 34. Update Checksum for GAME.007 (Required)
 
-Target File: `BCAS20202_ICO/GAME.007`
+Target File: `BCAS20202_ICO\GAME.007`
 
 ```
 set [csum]:0
@@ -258,7 +258,7 @@ write next (0):[csum]
 
 ### 35. Update Checksum for GAME.008 (Required)
 
-Target File: `BCAS20202_ICO/GAME.008`
+Target File: `BCAS20202_ICO\GAME.008`
 
 ```
 set [csum]:0
@@ -270,7 +270,7 @@ write next (0):[csum]
 
 ### 36. Update Checksum for GAME.009 (Required)
 
-Target File: `BCAS20202_ICO/GAME.009`
+Target File: `BCAS20202_ICO\GAME.009`
 
 ```
 set [csum]:0
