--- a/docs/PS3/BCUS98246.md
+++ b/docs/PS3/BCUS98246.md
@@ -5,7 +5,7 @@
 ### 1. Sly 1
 ### 2. 99 lifes
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 000019E3 00000063
@@ -14,7 +14,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 3. Sly 1\Untested Codes
 ### 4. Max Badges
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 000019EB 00000063
@@ -22,7 +22,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 5. Have All Moves
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200019F3 FFFFFFFF
@@ -30,7 +30,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 6. Unlock All Movies
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200019F7 FFFFFFFF
@@ -39,7 +39,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 7. Sly 1\Untested Codes\Have Horseshoe(Choose One)
 ### 8. Have Normal Horseshoe
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 000019E7 00000000
@@ -47,7 +47,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 9. Have Silver Horseshoe
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 000019E7 00000001
@@ -55,7 +55,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 10. Have Gold Horseshoe
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 000019E7 00000002
@@ -64,7 +64,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 11. Sly 1\Untested Codes\Unlock World Codes
 ### 12. Sunset Snake Eyes
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000CF3 00000001
@@ -72,7 +72,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 13. Vicious Voodoo
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000113F 00000001
@@ -80,7 +80,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 14. Fire In The Sky
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000158B 00000001
@@ -88,7 +88,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 15. The Cold Heart Of Hate
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200019D7 00000001
@@ -97,7 +97,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 16. Sly 1\Untested Codes\Tide Of Terror Codes
 ### 17. Max Keys
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000897 00000007
@@ -105,7 +105,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 18. Max Vaults
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000089B 00000006
@@ -113,7 +113,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 19. Max Time Trials
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000089F 00000006
@@ -122,7 +122,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 20. Sly 1\Untested Codes\Tide Of Terror Codes\Unlock Level Codes
 ### 21. A Stealthy Approach
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000045F 00000001
@@ -130,7 +130,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 22. Prowling The Grounds
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200004D7 00000001
@@ -138,7 +138,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 23. High Class Heist
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000054F 00000001
@@ -146,7 +146,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 24. Into The Machine
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200005C7 00000001
@@ -154,7 +154,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 25. A Cunning Disguise
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000063F 00000001
@@ -162,7 +162,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 26. The Fire Down Below
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200006B7 00000001
@@ -170,7 +170,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 27. Treasure In The Depths
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000072F 00000001
@@ -178,7 +178,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 28. The Gunboat Graveyard
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200007A7 00000001
@@ -186,7 +186,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 29. The Eye Of The Storm
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000081F 00000001
@@ -195,7 +195,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 30. Sly 1\Untested Codes\Tide Of Terror Codes\Have Level Completed Codes
 ### 31. A Stealthy Approach
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000045F 0000000F
@@ -203,7 +203,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 32. Prowling The Grounds
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200004D7 0000000F
@@ -211,7 +211,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 33. High Class Heist
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000054F 0000000F
@@ -219,7 +219,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 34. Into The Machine
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200005C7 0000000F
@@ -227,7 +227,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 35. A Cunning Disguise
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000063F 0000000F
@@ -235,7 +235,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 36. The Fire Down Below
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200006B7 0000000F
@@ -243,7 +243,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 37. Treasure In The Depths
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000072F 0000000F
@@ -251,7 +251,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 38. The Gunboat Graveyard
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200007A7 0000000F
@@ -259,7 +259,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 39. The Eye Of The Storm
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000081F 0000000F
@@ -268,7 +268,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 40. Sly 1\Untested Codes\Tide Of Terror Codes\Max Clues Codes
 ### 41. A Stealthy Approach
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200004C3 00000014
@@ -276,7 +276,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 42. High Class Heist
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200005B3 0000001E
@@ -284,7 +284,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 43. Into The Machine
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000062B 0000001E
@@ -292,7 +292,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 44. A Cunning Disguise
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200006A3 0000001E
@@ -300,7 +300,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 45. The Fire Down Below
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000071B 0000001E
@@ -308,7 +308,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 46. The Gunboat Graveyard
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000080B 00000014
@@ -317,7 +317,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 47. Sly 1\Untested Codes\Sunset Snake Eyes Codes
 ### 48. Max Keys
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000CE3 00000007
@@ -325,7 +325,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 49. Max Vaults
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000CE7 00000005
@@ -333,7 +333,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 50. Max Time Trials
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000CEB 00000005
@@ -342,7 +342,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 51. Sly 1\Untested Codes\Sunset Snake Eyes Codes\Unlock Level Codes
 ### 52. A Rocky Start
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200008AB 00000001
@@ -350,7 +350,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 53. Muggshot's Turf
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000923 00000001
@@ -358,7 +358,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 54. Boneyard Casino
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000099B 00000001
@@ -366,7 +366,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 55. Murray's Big Gamble
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000A13 00000001
@@ -374,7 +374,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 56. At The Dog Track
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000A8B 00000001
@@ -382,7 +382,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 57. Two To Tango
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000B03 00000001
@@ -390,7 +390,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 58. Straight To The Top
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000B7B 00000001
@@ -398,7 +398,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 59. Back Alley Heist
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000BF3 00000001
@@ -406,7 +406,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 60. Last Call
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000C6B 00000001
@@ -415,7 +415,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 61. Sly 1\Untested Codes\Sunset Snake Eyes Codes\Have Level Completed Codes
 ### 62. A Rocky Start
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200008AB 0000000F
@@ -423,7 +423,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 63. Muggshot's Turf
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000923 0000000F
@@ -431,7 +431,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 64. Boneyard Casino
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000099B 0000000F
@@ -439,7 +439,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 65. Murray's Big Gamble
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000A13 0000000F
@@ -447,7 +447,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 66. At The Dog Track
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000A8B 0000000F
@@ -455,7 +455,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 67. Two To Tango
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000B03 0000000F
@@ -463,7 +463,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 68. Straight To The Top
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000B7B 0000000F
@@ -471,7 +471,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 69. Back Alley Heist
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000BF3 0000000F
@@ -479,7 +479,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 70. Last Call
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000C6B 0000000F
@@ -488,7 +488,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 71. Sly 1\Untested Codes\Sunset Snake Eyes Codes\Max Clues Codes
 ### 72. A Rocky Start
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000090F 00000028
@@ -496,7 +496,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 73. Boneyard Casino
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200009FF 00000028
@@ -504,7 +504,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 74. Two To Tango
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000B67 0000001E
@@ -512,7 +512,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 75. Straight To The Top
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000BDF 00000028
@@ -520,7 +520,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 76. Back Alley Heist
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000C57 0000001E
@@ -529,7 +529,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 77. Sly 1\Untested Codes\Vicious Voodoo Codes
 ### 78. Max Keys
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000112F 00000007
@@ -537,7 +537,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 79. Max Vaults
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001133 00000004
@@ -545,7 +545,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 80. Max Time Trials
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001137 00000004
@@ -554,7 +554,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 81. Sly 1\Untested Codes\Vicious Voodoo Codes\Unlock Level Codes
 ### 82. The Dread Swamp Path
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000CF7 00000001
@@ -562,7 +562,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 83. The Swamp's Dark Center
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000D6F 00000001
@@ -570,7 +570,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 84. The Lair Of The Beast
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000DE7 00000001
@@ -578,7 +578,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 85. A Grave Undertaking
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000E5F 00000001
@@ -586,7 +586,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 86. Piranha Lake
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000ED7 00000001
@@ -594,7 +594,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 87. Descent Into Danger
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000F4F 00000001
@@ -602,7 +602,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 88. A Ghastly Voyage
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000FC7 00000001
@@ -610,7 +610,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 89. Down Home Cooking
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000103F 00000001
@@ -618,7 +618,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 90. A Deadly Dance
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200010B7 00000001
@@ -627,7 +627,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 91. Sly 1\Untested Codes\Vicious Voodoo Codes\Have Level Completed Codes
 ### 92. The Dread Swamp Path
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000CF7 0000000F
@@ -635,7 +635,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 93. The Swamp's Dark Center
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000D6F 0000000F
@@ -643,7 +643,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 94. The Lair Of The Beast
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000DE7 0000000F
@@ -651,7 +651,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 95. A Grave Undertaking
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000E5F 0000000F
@@ -659,7 +659,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 96. Piranha Lake
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000ED7 0000000F
@@ -667,7 +667,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 97. Descent Into Danger
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000F4F 0000000F
@@ -675,7 +675,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 98. A Ghastly Voyage
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000FC7 0000000F
@@ -683,7 +683,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 99. Down Home Cooking
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000103F 0000000F
@@ -691,7 +691,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 100. A Deadly Dance
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200010B7 0000000F
@@ -700,7 +700,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 101. Sly 1\Untested Codes\Vicious Voodoo Codes\Max Clues Codes
 ### 102. The Dread Swamp Path
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000D5B 00000014
@@ -708,7 +708,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 103. The Lair Of The Beast
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000E4B 0000001E
@@ -716,7 +716,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 104. A Grave Undertaking
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000EC3 00000028
@@ -724,7 +724,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 105. Descent Into Danger
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000FB3 00000028
@@ -733,7 +733,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 106. Sly 1\Untested Codes\Fire In The Sky Codes
 ### 107. Max Keys
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000157B 00000007
@@ -741,7 +741,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 108. Max Vaults
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000157F 00000004
@@ -749,7 +749,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 109. Max Time Trials
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001583 00000004
@@ -758,7 +758,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 110. Sly 1\Untested Codes\Fire In The Sky Codes\Unlock Level Codes
 ### 111. A Perilous Ascent
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001143 00000001
@@ -766,7 +766,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 112. Into The Stronghold
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200011BB 00000001
@@ -774,7 +774,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 113. Flaming Temple Of Flame
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001233 00000001
@@ -782,7 +782,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 114. The Unseen Foe
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200012AB 00000001
@@ -790,7 +790,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 115. The King Of The Hill
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001323 00000001
@@ -798,7 +798,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 116. Rapid Fire Assault
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000139B 00000001
@@ -806,7 +806,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 117. Duel By The Dragon
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001413 00000001
@@ -814,7 +814,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 118. A Desperate Race
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000148B 00000001
@@ -822,7 +822,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 119. Flame Fu!
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001503 00000001
@@ -831,7 +831,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 120. Sly 1\Untested Codes\Fire In The Sky Codes\Have Level Completed Codes
 ### 121. A Perilous Ascent
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001143 0000000F
@@ -839,7 +839,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 122. Into The Stronghold
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200011BB 0000000F
@@ -847,7 +847,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 123. Flaming Temple Of Flame
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001233 0000000F
@@ -855,7 +855,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 124. The Unseen Foe
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200012AB 0000000F
@@ -863,7 +863,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 125. The King Of The Hill
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001323 0000000F
@@ -871,7 +871,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 126. Rapid Fire Assault
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000139B 0000000F
@@ -879,7 +879,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 127. Duel By The Dragon
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001413 0000000F
@@ -887,7 +887,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 128. A Desperate Race
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000148B 0000000F
@@ -895,7 +895,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 129. Flame Fu!
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001503 0000000F
@@ -904,7 +904,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 130. Sly 1\Untested Codes\Fire In The Sky Codes\Max Clues Codes
 ### 131. A Perilous Ascent
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200011A7 0000001E
@@ -912,7 +912,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 132. Flaming Temple Of Flame
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001297 00000019
@@ -920,7 +920,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 133. The Unseen Foe
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000130F 0000001E
@@ -928,7 +928,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 134. Duel By The Dragon
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20001477 00000028
@@ -938,7 +938,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 136. Sly 1\Untested Codes\The Cold Heart Of Hate Codes\Unlock Level Codes
 ### 137. A Hazardous Path
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000158F 00000001
@@ -946,7 +946,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 138. Burning Rubber
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000167F 00000001
@@ -954,7 +954,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 139. A Daring Rescue
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200016F7 00000001
@@ -962,7 +962,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 140. Bentley Comes Through
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000176F 00000001
@@ -970,7 +970,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 141. A Temporary Truce
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200017E7 00000001
@@ -978,7 +978,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 142. Sinking Peril
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000185F 00000001
@@ -986,7 +986,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 143. A Strange Reunion
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000194F 00000001
@@ -995,7 +995,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 144. Sly 2
 ### 145. Max Coins
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200000AC 05F5E0FF
@@ -1004,7 +1004,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 146. Sly 2\Untested Codes
 ### 147. Access All Episodes+Movies
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 00000007 00000008
@@ -1012,7 +1012,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 148. Have All Gadgets
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200000A4 FFFFFFFF
@@ -1021,7 +1021,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 149. All Levels Completed Codes
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000240 3F800000
@@ -1037,7 +1037,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 150. Sly 3
 ### 151. Max Coins
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200000B4 05F5E0FF
@@ -1046,7 +1046,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 152. Sly 3\Untested Codes
 ### 153. Have All Gadgets
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200000A4 FFFFFFFF
@@ -1056,7 +1056,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 154. Sly 3\Untested Codes\Unlock Level Codes
 ### 155. Hazard Room
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000016C 3F800000
@@ -1064,7 +1064,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 156. An Opera Of Fear
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000178 3F800000
@@ -1072,7 +1072,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 157. Rumble Down Under
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000184 3F800000
@@ -1080,7 +1080,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 158. Flight Of Fancy
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20000190 3F800000
@@ -1088,7 +1088,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 159. A Cold Alliance
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 2000019C 3F800000
@@ -1096,7 +1096,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 160. Dead Mean Tell No Tales
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200001A8 3F800000
@@ -1104,7 +1104,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 161. Honor Among Thieves
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200001B4 3F800000
@@ -1114,7 +1114,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 163. Sly 3\Untested Codes\Have Jobs & Challenges Completed Codes\Episode 1
 ### 164. Canal Chase-Expert Course
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005208 00000001
@@ -1122,7 +1122,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 165. Air Time
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200051F8 00000001
@@ -1130,7 +1130,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 166. Tower Scramble
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005270 00000001
@@ -1138,7 +1138,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 167. Coin Chase
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005268 00000001
@@ -1146,7 +1146,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 168. Speed Bombing
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005238 00000001
@@ -1154,7 +1154,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 169. Octavio Canal Challenge
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005248 00000001
@@ -1162,7 +1162,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 170. Octavio's Last Stand
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005240 00000001
@@ -1170,7 +1170,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 171. Venice Treasure Hunt
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005250 00000001
@@ -1179,7 +1179,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 172. Sly 3\Untested Codes\Have Jobs & Challenges Completed Codes\Episode 2
 ### 173. Rock Run
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005300 00000001
@@ -1187,7 +1187,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 174. Cave Sprint
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200052A0 00000001
@@ -1195,7 +1195,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 175. Cave Mayhem
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200052A8 00000001
@@ -1203,7 +1203,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 176. Scaling The Drill
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200052C8 00000001
@@ -1211,7 +1211,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 177. Guard Swappin'
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005310 00000001
@@ -1219,7 +1219,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 178. Quick Claw
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200052B8 00000001
@@ -1227,7 +1227,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 179. Pressure Brawl
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005288 00000001
@@ -1235,7 +1235,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 180. Croc And Coins
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200052D8 00000001
@@ -1243,7 +1243,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 181. Carmelita Climb
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200052E8 00000001
@@ -1251,7 +1251,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 182. Outback Treasure Hunt
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200052F0 00000001
@@ -1260,7 +1260,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 183. Sly 3\Untested Codes\Have Jobs & Challenges Completed Codes\Episode 3
 ### 184. Castle Quick Climb
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005388 00000001
@@ -1268,7 +1268,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 185. Muggshot Goon Attack
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005340 00000001
@@ -1276,7 +1276,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 186. Security Breach
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005350 00000001
@@ -1284,7 +1284,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 187. Defend The Hangar
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005348 00000001
@@ -1292,7 +1292,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 188. Precision Air Duel
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005398 00000001
@@ -1300,7 +1300,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 189. Wolf Rampage
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200053B0 00000001
@@ -1308,7 +1308,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 190. One Woman Army
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005378 00000001
@@ -1316,7 +1316,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 191. Going Out On A Wing
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005360 00000001
@@ -1324,7 +1324,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 192. Holland Treasure Hunt
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005368 00000001
@@ -1333,7 +1333,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 193. Sly 3\Untested Codes\Have Jobs & Challenges Completed Codes\Episode 4
 ### 194. Big Air In China
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200053D8 00000001
@@ -1341,7 +1341,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 195. Sharpshooter
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005410 00000001
@@ -1349,7 +1349,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 196. Treetop Tangle
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005400 00000001
@@ -1357,7 +1357,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 197. Tsao Showdown
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200053F8 00000001
@@ -1365,7 +1365,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 198. China Treasure Hunt
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200053D0 00000001
@@ -1374,7 +1374,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 199. Sly 3\Untested Codes\Have Jobs & Challenges Completed Codes\Episode 5
 ### 200. Patch Grab
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005488 00000001
@@ -1382,7 +1382,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 201. Stealth Challenge
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005490 00000001
@@ -1390,7 +1390,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 202. Boat Bash
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005468 00000001
@@ -1398,7 +1398,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 203. Last Ship Sailing
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005438 00000001
@@ -1406,7 +1406,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 204. Pirate Treasure Hunt
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 20005478 00000001
@@ -1415,7 +1415,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 ### 205. Sly 3\Untested Codes\Have Jobs & Challenges Completed Codes\Episode 6
 ### 206. Beauty Versus The Beast
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200054E8 00000001
@@ -1423,7 +1423,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 207. Road Rage
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200054D0 00000001
@@ -1431,7 +1431,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 208. Dr. M Dogfight
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200054B0 00000001
@@ -1439,7 +1439,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 209. Ultimate Gauntlet
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200054F8 00000001
@@ -1447,7 +1447,7 @@ Target File: `BCUS98246-AUTO-0/USR-DATA`
 
 ### 210. Battle Against Time
 
-Target File: `BCUS98246-AUTO-0/USR-DATA`
+Target File: `BCUS98246-AUTO-0\USR-DATA`
 
 ```
 200054C0 00000001
