--- a/docs/PS3/BCUS98259.md
+++ b/docs/PS3/BCUS98259.md
@@ -5,7 +5,7 @@
 ### 1. ICO
 ### 2. Save 1 Play Time 0:00
 
-Target File: `BCUS98259_ICO/MASTER.BIN`
+Target File: `BCUS98259_ICO\MASTER.BIN`
 
 ```
 20000008 00000000
@@ -13,7 +13,7 @@ Target File: `BCUS98259_ICO/MASTER.BIN`
 
 ### 3. Save 2 Play Time 0:00
 
-Target File: `BCUS98259_ICO/MASTER.BIN`
+Target File: `BCUS98259_ICO\MASTER.BIN`
 
 ```
 2000001C 00000000
@@ -21,7 +21,7 @@ Target File: `BCUS98259_ICO/MASTER.BIN`
 
 ### 4. Save 3 Play Time 0:00
 
-Target File: `BCUS98259_ICO/MASTER.BIN`
+Target File: `BCUS98259_ICO\MASTER.BIN`
 
 ```
 20000030 00000000
@@ -29,7 +29,7 @@ Target File: `BCUS98259_ICO/MASTER.BIN`
 
 ### 5. Save 4 Play Time 0:00
 
-Target File: `BCUS98259_ICO/MASTER.BIN`
+Target File: `BCUS98259_ICO\MASTER.BIN`
 
 ```
 20000044 00000000
@@ -37,7 +37,7 @@ Target File: `BCUS98259_ICO/MASTER.BIN`
 
 ### 6. Save 5 Play Time 0:00
 
-Target File: `BCUS98259_ICO/MASTER.BIN`
+Target File: `BCUS98259_ICO\MASTER.BIN`
 
 ```
 20000058 00000000
@@ -150,7 +150,7 @@ Target File: `BCUS98259_SOTC/GAME.00*`
 ### 25.  Update ICO Checksum (Required)
 ### 26. Update Checksum for MASTER.BIN (Required)
 
-Target File: `BCUS98259_ICO/MASTER.BIN`
+Target File: `BCUS98259_ICO\MASTER.BIN`
 
 ```
 set [csum]:0
@@ -162,7 +162,7 @@ write next (0):[csum]
 
 ### 27. Update Checksum for GAME.000 (Required)
 
-Target File: `BCUS98259_ICO/GAME.000`
+Target File: `BCUS98259_ICO\GAME.000`
 
 ```
 set [csum]:0
@@ -174,7 +174,7 @@ write next (0):[csum]
 
 ### 28. Update Checksum for GAME.001 (Required)
 
-Target File: `BCUS98259_ICO/GAME.001`
+Target File: `BCUS98259_ICO\GAME.001`
 
 ```
 set [csum]:0
@@ -186,7 +186,7 @@ write next (0):[csum]
 
 ### 29. Update Checksum for GAME.002 (Required)
 
-Target File: `BCUS98259_ICO/GAME.002`
+Target File: `BCUS98259_ICO\GAME.002`
 
 ```
 set [csum]:0
@@ -198,7 +198,7 @@ write next (0):[csum]
 
 ### 30. Update Checksum for GAME.004 (Required)
 
-Target File: `BCUS98259_ICO/GAME.003`
+Target File: `BCUS98259_ICO\GAME.003`
 
 ```
 set [csum]:0
@@ -210,7 +210,7 @@ write next (0):[csum]
 
 ### 31. Update Checksum for GAME.004 (Required)
 
-Target File: `BCUS98259_ICO/GAME.004`
+Target File: `BCUS98259_ICO\GAME.004`
 
 ```
 set [csum]:0
@@ -222,7 +222,7 @@ write next (0):[csum]
 
 ### 32. Update Checksum for GAME.005 (Required)
 
-Target File: `BCUS98259_ICO/GAME.005`
+Target File: `BCUS98259_ICO\GAME.005`
 
 ```
 set [csum]:0
@@ -234,7 +234,7 @@ write next (0):[csum]
 
 ### 33. Update Checksum for GAME.006 (Required)
 
-Target File: `BCUS98259_ICO/GAME.006`
+Target File: `BCUS98259_ICO\GAME.006`
 
 ```
 set [csum]:0
@@ -246,7 +246,7 @@ write next (0):[csum]
 
 ### 34. Update Checksum for GAME.007 (Required)
 
-Target File: `BCUS98259_ICO/GAME.007`
+Target File: `BCUS98259_ICO\GAME.007`
 
 ```
 set [csum]:0
@@ -258,7 +258,7 @@ write next (0):[csum]
 
 ### 35. Update Checksum for GAME.008 (Required)
 
-Target File: `BCUS98259_ICO/GAME.008`
+Target File: `BCUS98259_ICO\GAME.008`
 
 ```
 set [csum]:0
@@ -270,7 +270,7 @@ write next (0):[csum]
 
 ### 36. Update Checksum for GAME.009 (Required)
 
-Target File: `BCUS98259_ICO/GAME.009`
+Target File: `BCUS98259_ICO\GAME.009`
 
 ```
 set [csum]:0
