--- a/docs/PS3/BLAS50575.md
+++ b/docs/PS3/BLAS50575.md
@@ -5,7 +5,7 @@
 ### 1. System Data
 ### 2. VP 999999(Max)
 
-Target File: `BLJM60581-SYS/SYSTEM.DAT`
+Target File: `BLJM60581-SYS\SYSTEM.DAT`
 
 ```
 20000068 000F423F
