--- a/docs/PS3/BLES00410.md
+++ b/docs/PS3/BLES00410.md
@@ -12,7 +12,7 @@ Decompress SAVE.DAT
 
 ### 2. 32767 Skill Points(Apply on xxx.neo file)
 
-Target File: `~extracted/*.neo`
+Target File: `~extracted\*.neo`
 
 ```
 search 0xFFFFAA07
@@ -21,7 +21,7 @@ write next 8:0x7FFF
 
 ### 3. 32767 Attribute Points(Apply on xxx.neo file)
 
-Target File: `~extracted/*.neo`
+Target File: `~extracted\*.neo`
 
 ```
 search 0xFFFFAA07
@@ -30,7 +30,7 @@ write next A:0x7FFF
 
 ### 4. Lots of Gold(Apply on xxx.neo file)
 
-Target File: `~extracted/*.neo`
+Target File: `~extracted\*.neo`
 
 ```
 search 0xFFFFAA07
@@ -39,7 +39,7 @@ write next 19A:0x7FFFFFFF
 
 ### 5. Lots of Kills Counts(Apply on xxx.neo file)
 
-Target File: `~extracted/*.neo`
+Target File: `~extracted\*.neo`
 
 ```
 search 0xFFFFAA07
@@ -48,7 +48,7 @@ write next 1CC:0x7FFFFFFF
 
 ### 6. Kill 1 to max out level(Apply on xxx.neo file)
 
-Target File: `~extracted/*.neo`
+Target File: `~extracted\*.neo`
 
 ```
 search 0xFFFFAA07
@@ -57,7 +57,7 @@ write next C:0x03B86412
 
 ### 7. Max Gold(Apply on xxx.neo file)
 
-Target File: `~extracted/*.neo`
+Target File: `~extracted\*.neo`
 
 ```
 search 0xFFFFAA07
@@ -66,7 +66,7 @@ write next 19A:0x7FFFFFFF
 
 ### 8. Easy Leveling(Apply on xxx.neo file)
 
-Target File: `~extracted/*.neo`
+Target File: `~extracted\*.neo`
 
 ```
 search 0xFFFFAA07
